storn/StornParser.py
# Generated from storn/Storn.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class StornParser ( Parser ):

    grammarFileName = "Storn.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'data'", "'{'", "'}'", "'.'", "':'", 
                     "'routine'", "'('", "')'", "'->'", "','", "'init'", 
                     "'set'", "'='", "'$'", "'/'", "'@'", "'if'", "'loop'", 
                     "'break'", "'output'", "'return'", "'+'", "'&'", "'+:'", 
                     "'-:'", "'*'", "'-'", "'~'", "'<'", "'>'", "'<='", 
                     "'>='", "'!'", "'[0]'", "'[8]'", "'[16]'", "'['", "']'", 
                     "'^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NAME", "CONSTANT", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_data = 2
    RULE_typeDeclaration = 3
    RULE_typedVar = 4
    RULE_routine = 5
    RULE_typedParamList = 6
    RULE_statements = 7
    RULE_statement = 8
    RULE_initStmt = 9
    RULE_setStmt = 10
    RULE_lvalue = 11
    RULE_ifStmt = 12
    RULE_loopStmt = 13
    RULE_breakStmt = 14
    RULE_outputStmt = 15
    RULE_returnStmt = 16
    RULE_expression = 17
    RULE_logicalExpr = 18
    RULE_comparativeExpr = 19
    RULE_additiveExpr = 20
    RULE_multiplicativeExpr = 21
    RULE_unaryExpr = 22
    RULE_primaryExpr = 23
    RULE_comparativeOp = 24
    RULE_call = 25
    RULE_callArgs = 26
    RULE_arrayIndex = 27
    RULE_refValue = 28
    RULE_type = 29

    ruleNames =  [ "program", "declaration", "data", "typeDeclaration", 
                   "typedVar", "routine", "typedParamList", "statements", 
                   "statement", "initStmt", "setStmt", "lvalue", "ifStmt", 
                   "loopStmt", "breakStmt", "outputStmt", "returnStmt", 
                   "expression", "logicalExpr", "comparativeExpr", "additiveExpr", 
                   "multiplicativeExpr", "unaryExpr", "primaryExpr", "comparativeOp", 
                   "call", "callArgs", "arrayIndex", "refValue", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    NAME=40
    CONSTANT=41
    WS=42
    COMMENT=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(StornParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StornParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(StornParser.DeclarationContext,i)


        def getRuleIndex(self):
            return StornParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = StornParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==6:
                self.state = 60
                self.declaration()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(StornParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data(self):
            return self.getTypedRuleContext(StornParser.DataContext,0)


        def routine(self):
            return self.getTypedRuleContext(StornParser.RoutineContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = StornParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.data()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.routine()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(StornParser.NAME, 0)

        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StornParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(StornParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return StornParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)




    def data(self):

        localctx = StornParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(StornParser.T__0)
            self.state = 73
            self.match(StornParser.NAME)
            self.state = 74
            self.match(StornParser.T__1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 75
                self.typeDeclaration()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(StornParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedVar(self):
            return self.getTypedRuleContext(StornParser.TypedVarContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)




    def typeDeclaration(self):

        localctx = StornParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.typedVar()
            self.state = 84
            self.match(StornParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(StornParser.NAME, 0)

        def type_(self):
            return self.getTypedRuleContext(StornParser.TypeContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_typedVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedVar" ):
                listener.enterTypedVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedVar" ):
                listener.exitTypedVar(self)




    def typedVar(self):

        localctx = StornParser.TypedVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typedVar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(StornParser.NAME)
            self.state = 87
            self.match(StornParser.T__4)
            self.state = 88
            self.type_(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoutineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(StornParser.NAME, 0)

        def typedParamList(self):
            return self.getTypedRuleContext(StornParser.TypedParamListContext,0)


        def type_(self):
            return self.getTypedRuleContext(StornParser.TypeContext,0)


        def statements(self):
            return self.getTypedRuleContext(StornParser.StatementsContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_routine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoutine" ):
                listener.enterRoutine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoutine" ):
                listener.exitRoutine(self)




    def routine(self):

        localctx = StornParser.RoutineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_routine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(StornParser.T__5)
            self.state = 91
            self.match(StornParser.NAME)
            self.state = 92
            self.match(StornParser.T__6)
            self.state = 93
            self.typedParamList()
            self.state = 94
            self.match(StornParser.T__7)
            self.state = 95
            self.match(StornParser.T__8)
            self.state = 96
            self.type_(0)
            self.state = 97
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedVar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StornParser.TypedVarContext)
            else:
                return self.getTypedRuleContext(StornParser.TypedVarContext,i)


        def getRuleIndex(self):
            return StornParser.RULE_typedParamList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedParamList" ):
                listener.enterTypedParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedParamList" ):
                listener.exitTypedParamList(self)




    def typedParamList(self):

        localctx = StornParser.TypedParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typedParamList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 99
                self.typedVar()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 100
                    self.match(StornParser.T__9)
                    self.state = 101
                    self.typedVar()
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StornParser.StatementContext)
            else:
                return self.getTypedRuleContext(StornParser.StatementContext,i)


        def getRuleIndex(self):
            return StornParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = StornParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(StornParser.T__1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4069376) != 0):
                self.state = 110
                self.statement()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(StornParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initStmt(self):
            return self.getTypedRuleContext(StornParser.InitStmtContext,0)


        def setStmt(self):
            return self.getTypedRuleContext(StornParser.SetStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(StornParser.IfStmtContext,0)


        def loopStmt(self):
            return self.getTypedRuleContext(StornParser.LoopStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(StornParser.BreakStmtContext,0)


        def outputStmt(self):
            return self.getTypedRuleContext(StornParser.OutputStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(StornParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = StornParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.initStmt()
                self.state = 119
                self.match(StornParser.T__3)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.setStmt()
                self.state = 122
                self.match(StornParser.T__3)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.ifStmt()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 125
                self.loopStmt()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 126
                self.breakStmt()
                self.state = 127
                self.match(StornParser.T__3)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.outputStmt()
                self.state = 130
                self.match(StornParser.T__3)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 7)
                self.state = 132
                self.returnStmt()
                self.state = 133
                self.match(StornParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedVar(self):
            return self.getTypedRuleContext(StornParser.TypedVarContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_initStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitStmt" ):
                listener.enterInitStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitStmt" ):
                listener.exitInitStmt(self)




    def initStmt(self):

        localctx = StornParser.InitStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_initStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(StornParser.T__10)
            self.state = 138
            self.typedVar()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(StornParser.LvalueContext,0)


        def expression(self):
            return self.getTypedRuleContext(StornParser.ExpressionContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_setStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetStmt" ):
                listener.enterSetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetStmt" ):
                listener.exitSetStmt(self)




    def setStmt(self):

        localctx = StornParser.SetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_setStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(StornParser.T__11)
            self.state = 141
            self.lvalue(0)
            self.state = 142
            self.match(StornParser.T__12)
            self.state = 143
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(StornParser.NAME, 0)

        def lvalue(self):
            return self.getTypedRuleContext(StornParser.LvalueContext,0)


        def expression(self):
            return self.getTypedRuleContext(StornParser.ExpressionContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_lvalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLvalue" ):
                listener.enterLvalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLvalue" ):
                listener.exitLvalue(self)



    def lvalue(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = StornParser.LvalueContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_lvalue, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.state = 146
                self.match(StornParser.NAME)
                pass
            elif token in [14]:
                self.state = 147
                self.match(StornParser.T__13)
                self.state = 148
                self.lvalue(3)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 159
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 157
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = StornParser.LvalueContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_lvalue)
                        self.state = 151
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 152
                        self.match(StornParser.T__14)
                        self.state = 153
                        self.expression()
                        pass

                    elif la_ == 2:
                        localctx = StornParser.LvalueContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_lvalue)
                        self.state = 154
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 155
                        self.match(StornParser.T__15)
                        self.state = 156
                        self.expression()
                        pass

             
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(StornParser.ExpressionContext,0)


        def statements(self):
            return self.getTypedRuleContext(StornParser.StatementsContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = StornParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(StornParser.T__16)
            self.state = 163
            self.expression()
            self.state = 164
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(StornParser.StatementsContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_loopStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStmt" ):
                listener.enterLoopStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStmt" ):
                listener.exitLoopStmt(self)




    def loopStmt(self):

        localctx = StornParser.LoopStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_loopStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(StornParser.T__17)
            self.state = 167
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StornParser.RULE_breakStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStmt" ):
                listener.enterBreakStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStmt" ):
                listener.exitBreakStmt(self)




    def breakStmt(self):

        localctx = StornParser.BreakStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_breakStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(StornParser.T__18)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(StornParser.ExpressionContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_outputStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputStmt" ):
                listener.enterOutputStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputStmt" ):
                listener.exitOutputStmt(self)




    def outputStmt(self):

        localctx = StornParser.OutputStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_outputStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(StornParser.T__19)
            self.state = 172
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(StornParser.ExpressionContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)




    def returnStmt(self):

        localctx = StornParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_returnStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(StornParser.T__20)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3307527487616) != 0):
                self.state = 175
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalExpr(self):
            return self.getTypedRuleContext(StornParser.LogicalExprContext,0)


        def getRuleIndex(self):
            return StornParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = StornParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.logicalExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalExprContext(ParserRuleContext):
        __slots__ = 'parser'
